--- a/data/RedHat-6.yaml
+++ b/data/RedHat-6.yaml
@@ -1,6 +1,6 @@
 # Specific options for RedHat 6 systems
 # NOTE: These are merged with the 'login_defs::common_options' specified in 'RedHat.yaml'
 ---
-login_defs::options:
+login_defs::default_options:
   GID_MIN: '500'
   UID_MIN: '500'
