Add rhel9 stuff.

--- a/.pdkignore
+++ b/.pdkignore
@@ -1,12 +1,10 @@
 .git/
-.github/
 .*.sw[op]
 .metadata
 .yardoc
 .yardwarns
 *.iml
 /.bundle/
-/.bundler/
 /.idea/
 /.vagrant/
 /coverage/
@@ -27,13 +25,16 @@
 .project
 .envrc
 /inventory.yaml
+/spec/fixtures/litmus_inventory.yaml
 /appveyor.yml
+/.editorconfig
 /.fixtures.yml
 /Gemfile
 /.gitattributes
 /.gitignore
 /.gitlab-ci.yml
 /.pdkignore
+/.puppet-lint.rc
 /Rakefile
 /rakelib/
 /.rspec
@@ -42,3 +43,5 @@
 /.yardopts
 /spec/
 /.vscode/
+/.sync.yml
+/.devcontainer/
