--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@
 .yardwarns
 *.iml
 /.bundle/
-/.bundler/
 /.idea/
 /.vagrant/
 /coverage/
@@ -26,3 +25,4 @@
 .project
 .envrc
 /inventory.yaml
+/spec/fixtures/litmus_inventory.yaml
