--- a/spec/matrix.yaml
+++ b/spec/matrix.yaml
@@ -82,6 +82,42 @@ test_matrix:
       UID_MIN: '1000'
       USERGROUPS_ENAB: 'yes'
 
+  redhat_9:
+    facts:
+      os:
+        family: RedHat
+        distro:
+          release:
+            major: '9'
+        release:
+          major: '9'
+    options:
+      CREATE_HOME: 'yes'
+      ENCRYPT_METHOD: 'SHA512'
+      GID_MAX: '60000'
+      GID_MIN: '1000'
+      HMAC_CRYPTO_ALGO: 'SHA512'
+      HOME_MODE: '0700'
+      MAIL_DIR: '/var/spool/mail'
+      PASS_MAX_DAYS: '99999'
+      PASS_MIN_DAYS: '0'
+      PASS_MIN_LEN: '5'
+      PASS_WARN_AGE: '7'
+      SUB_GID_COUNT: '65536'
+      SUB_GID_MAX: '600100000'
+      SUB_GID_MIN: '100000'
+      SUB_UID_COUNT: '65536'
+      SUB_UID_MAX: '600100000'
+      SUB_UID_MIN: '100000'
+      SYS_GID_MAX: '999'
+      SYS_GID_MIN: '201'
+      SYS_UID_MAX: '999'
+      SYS_UID_MIN: '201'
+      UID_MAX: '60000'
+      UID_MIN: '1000'
+      UMASK: '022'
+      USERGROUPS_ENAB: 'yes'
+
   gentoo:
     facts:
       os:
