--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@
 .yardwarns
 *.iml
 /.bundle/
-/.bundler/
 /.idea/
 /.vagrant/
 /coverage/
@@ -17,7 +16,7 @@
 /log/
 /pkg/
 /spec/fixtures/manifests/
-/spec/fixtures/modules/
+/spec/fixtures/modules/*
 /tmp/
 /vendor/
 /convert_report.txt
@@ -26,3 +25,4 @@
 .project
 .envrc
 /inventory.yaml
+/spec/fixtures/litmus_inventory.yaml
