--- a/.pdkignore
+++ b/.pdkignore
@@ -1,12 +1,10 @@
 .git/
-.github/
 .*.sw[op]
 .metadata
 .yardoc
 .yardwarns
 *.iml
 /.bundle/
-/.bundler/
 /.idea/
 /.vagrant/
 /coverage/
@@ -18,7 +16,7 @@
 /log/
 /pkg/
 /spec/fixtures/manifests/
-/spec/fixtures/modules/
+/spec/fixtures/modules/*
 /tmp/
 /vendor/
 /convert_report.txt
@@ -27,18 +25,20 @@
 .project
 .envrc
 /inventory.yaml
-/appveyor.yml
+/spec/fixtures/litmus_inventory.yaml
 /.fixtures.yml
 /Gemfile
 /.gitattributes
+/.github/
 /.gitignore
-/.gitlab-ci.yml
 /.pdkignore
+/.puppet-lint.rc
 /Rakefile
 /rakelib/
 /.rspec
-/.rubocop.yml
-/.travis.yml
+/..yml
 /.yardopts
 /spec/
 /.vscode/
+/.sync.yml
+/.devcontainer/
