Remove redundant lint job

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -1,8 +1,10 @@
 name: Validation
 
 on:
-  - push
-  - pull_request
+  push:
+    branches:
+      - master
+  pull_request:
 
 jobs:
   pdk-validate:
@@ -18,20 +20,6 @@ jobs:
         options: -v ${{ github.workspace }}:/module -w /module
         run: |
           pdk validate --parallel
-
-  puppet-lint:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Clone repository
-      uses: actions/checkout@v4
-
-    - name: Run puppet-lint
-      uses: addnab/docker-run-action@v3
-      with:
-        image: puppet/pdk
-        options: -v ${{ github.workspace }}:/module -w /module
-        run: |
-          puppet-lint manifests/*.pp
 
   unit-tests:
     runs-on: ubuntu-latest
