Deprecate common_options; Simplify data
Deprecate the `common_options` parameter, which was a way to deal with
selectively merging configuration options.
This simplifies the data a bit to make the merge behavior less
confusing.

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -33,4 +33,4 @@ jobs:
         image: puppet/pdk
         options: -v ${{ github.workspace }}:/module -w /module
         run: |
-          pdk test unit
+          pdk test unit -v
