--- a/data/RedHat-9.yaml
+++ b/data/RedHat-9.yaml
@@ -1,10 +1,21 @@
-# Specific options for RedHat 9 systems
-# NOTE: These are merged with the 'login_defs::common_options' specified in 'RedHat.yaml'
+# Options for EL9 systems
 ---
 login_defs::default_options:
+  CREATE_HOME: 'yes'
+  ENCRYPT_METHOD: 'SHA512'
+  GID_MAX: '60000'
+  GID_MIN: '1000'
   HOME_MODE: '0700'
-  UMASK: '022'
+  MAIL_DIR: '/var/spool/mail'
+  PASS_MAX_DAYS: '99999'
+  PASS_MIN_DAYS: '0'
+  PASS_MIN_LEN: '5'
+  PASS_WARN_AGE: '7'
   SYS_GID_MAX: '999'
   SYS_GID_MIN: '201'
   SYS_UID_MAX: '999'
   SYS_UID_MIN: '201'
+  UID_MAX: '60000'
+  UID_MIN: '1000'
+  UMASK: '022'
+  USERGROUPS_ENAB: 'yes'
