--- a/data/RedHat-7.yaml
+++ b/data/RedHat-7.yaml
@@ -1,8 +1,20 @@
-# Specific options for RedHat 7 systems
-# NOTE: These are merged with the 'login_defs::common_options' specified in 'RedHat.yaml'
+# Options for EL7 systems
 ---
 login_defs::default_options:
+  CREATE_HOME: 'yes'
+  ENCRYPT_METHOD: 'SHA512'
+  GID_MAX: '60000'
+  GID_MIN: '1000'
+  MAIL_DIR: '/var/spool/mail'
+  PASS_MAX_DAYS: '99999'
+  PASS_MIN_DAYS: '0'
+  PASS_MIN_LEN: '5'
+  PASS_WARN_AGE: '7'
   SYS_GID_MAX: '999'
   SYS_GID_MIN: '201'
   SYS_UID_MAX: '999'
   SYS_UID_MIN: '201'
+  UID_MAX: '60000'
+  UID_MIN: '1000'
+  UMASK: '077'
+  USERGROUPS_ENAB: 'yes'
