--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -19,6 +19,7 @@ jobs:
         image: puppet/pdk
         options: -v ${{ github.workspace }}:/module -w /module
         run: |
+          apt-get update && apt-get install build-essential -y
           pdk validate --parallel
 
   unit-tests:
@@ -33,4 +34,5 @@ jobs:
         image: puppet/pdk
         options: -v ${{ github.workspace }}:/module -w /module
         run: |
+          apt-get update && apt-get install build-essential -y
           pdk test unit -v
